...

// MARK: - Setup -

extension HomeItemDetailsViewController {
    
    func basicSetup() {
        title = "Rocket Details"
    }
    
    func setupRx() {
        wikipediaButton.rx.tap.subscribe({ _ in
            if let rocket = try? self.homeItemDetailsViewModel.rocket.value(), let url = URL(string: rocket.wikipediaURL) {
                UIApplication.shared.open(url)
...
